--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,5 @@ plugins {
 	alias(libs.plugins.ksp) apply false
 	alias(libs.plugins.room) apply false
 	alias(libs.plugins.kotlinx.serizliation) apply false
+//	alias(libs.plugins.decoroutinator) apply false
 }
